# ECETutorProject

./: .gitignore  README.md  pyproject.toml
frontend/: app.js  index.html  styles.css
infra/: docker-compose.yml  env.example
infra/migrations/: 001_init.sql  002_users.sql
scripts/: run_ci_eval.py
services/api/: auth.py  config.py  deps.py  main.py
services/api/routes/: auth.py  chat.py  health.py  ingest.py  sources.py
services/api/schemas/: __init__.py  request_response.py
services/evals/: dataset_loader.py  metrics.py  run_eval.py  sample_dataset.json
services/ingestion/: chunker.py  embedder.py  indexer.py  ingest_runner.py  pdf_parser.py
services/retrieval/: context_builder.py  hybrid_retriever.py  query_rewriter.py  reranker.py
services/storage/: database.py  keyword_repo.py  models.py  object_store.py  postgres_repo.py  vector_repo.py
services/tutor_engine/: __init__.py  circuit_generator.py  groundedness_check.py  llm_client.py  orchestrator.py  prompt_templates.py  session_manager.py  socratic_policy.py
tests/: test_api.py  test_eval.py
